--- a/build.gradle
+++ b/build.gradle
@@ -4,27 +4,27 @@ apply plugin: 'eclipse'
 sourceCompatibility = 1.8  
 targetCompatibility = 1.8
 
-// tag::repositories[]
+version = '1.0'
+
 repositories {
     mavenCentral()
 }
-// end::repositories[]
 
-// tag::jar[]
 jar {
     baseName = 'hello-java8'
     version =  '0.1.0'
 }
-// end::jar[]
 
-// tag::dependencies[]
 dependencies {
     compile "joda-time:joda-time:2.2"
+    compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
+    testCompile group: 'junit', name: 'junit', version: '4.+'
 }
-// end::dependencies[]
 
-// tag::wrapper[]
+test {
+    systemProperties 'property': 'value'
+}
+
 task wrapper(type: Wrapper) {
     gradleVersion = '1.11'
 }
-// end::wrapper[]
